<resources>
    <string name="app_name">Todoister</string>
    <string name="action_settings">About</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="tv_description">Testing this thing..</string>
    <string name="tv_title">Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_todo_hint">e.g., Meditate before going to bed</string>
    <string name="today_calendar_button">Today</string>
    <string name="empty_field">Empty task</string>
    <string name="due_date_text">Due Date</string>
    <string name="today">Today</string>
    <string name="time">Time</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_wknd">This Weekend</string>
    <string name="next_week">Next Week</string>
    <string name="radio_high">High</string>
    <string name="radio_med">Medium</string>
    <string name="radio_low">Low</string>
    <string name="image_description">button image</string>
    <string name="about_text">Todoist Clone App - by ASIK - version 0.1</string>
    <string name="add_todos">Add a Todo…</string>
    <string name="delete_todo">Delete Selected</string>
    <string name="delete_all_todo">Delete All</string>
    <string name="todo_delete_select_msg">SELECTED TODO\'S WILL BE DELETED!</string>
    <string name="todo_delete_msg">ALL TODO\'S WILL BE DELETED!</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="single_todo_warning">TODO WILL BE DELETED!</string>
    <string name="settings">Settings</string>
    <string name="toastmsg_on_cancel">DELETE OPERATION CANCELED</string>
    <string name="about_msg_new">Todoist Clone App - by ♡Asik Ali Khan - version 1.2.6</string>
    <string name="textview">TextView</string>
    <string name="no_todo_to_show">No Todo to Show</string>
    <string name="alarm_msg">your todo is here</string>
    <string name="off_alarmbtn">OFF</string>
    <string name="alarm_aux_prioritytag"> PRIORITY</string>
    <string name="notification_for_tasks">Notification for Tasks</string>
    <string name="alarm_for_tasks">Alarm for Tasks</string>
    <string name="set_background_wallpaper">Set Wallpaper</string>
    <string name="button_operation">Save Changes</string>
    <string name="i_am_an_android_enthusiast_trying_to_make">write a description here if any</string>
    <string name="no_description">Not available</string>
    <string name="dateSelected">Date: </string>
    <string name="timeSelected">Time: </string>
    <string name="date_and_time">Date And Time</string>

</resources>