<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    app:behavior_hideable="false"
    app:behavior_peekHeight="@dimen/dimen_32"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <EditText
        android:id="@+id/enter_todo_et"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:layout_marginTop="60dp"
        android:hint="@string/enter_todo_hint"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:padding="@dimen/dimen_16"
        android:scrollHorizontally="true"
        android:textColorHint="#757575"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16"
        android:hint="write a description (Optional)"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:keepScreenOn="true"
        android:maxLines="22"
        android:padding="@dimen/dimen_16"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_todo_et" />

    <ImageButton
        android:id="@+id/priority_todo_button"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/today_timepicker_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_description_et"
        app:srcCompat="@drawable/ic_baseline_outlined_flag_24"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <ImageButton
        android:id="@+id/save_todo_button"
        android:layout_width="70dp"
        android:layout_height="81dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="TODO"
        android:scaleX="0.4"
        android:scaleY="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toEndOf="@+id/priority_todo_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_description_et"
        app:srcCompat="@drawable/ic_baseline_arrow_circle_up_24" />

    <ImageButton
        android:id="@+id/today_calendar_button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_description_et"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24" />

    <ImageButton
        android:id="@+id/today_timepicker_button"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/image_description"
        app:layout_constraintStart_toEndOf="@+id/today_calendar_button"
        app:layout_constraintTop_toBottomOf="@+id/enter_description_et"
        app:srcCompat="@drawable/ic_baseline_access_time_filled_24" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tomorrow_chip"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:text="@string/tomorrow"
        app:chipIcon="@drawable/ic_baseline_wb_sunny_24"
        app:layout_constraintEnd_toEndOf="@+id/next_week_chip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/next_week_chip"
        app:layout_constraintTop_toBottomOf="@+id/today_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/next_week_chip"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:text="@string/next_week"
        app:chipIcon="@drawable/ic_baseline_next_week_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tomorrow_chip" />

    <com.google.android.material.chip.Chip
        android:id="@+id/today_chip"
        android:layout_width="272dp"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:text="@string/today"
        app:chipIcon="@drawable/ic_baseline_today_24"
        app:layout_constraintEnd_toEndOf="@+id/tomorrow_chip"
        app:layout_constraintStart_toStartOf="@+id/tomorrow_chip"
        app:layout_constraintTop_toBottomOf="@+id/warning_msg" />

    <TextView
        android:id="@+id/warning_msg"
        android:layout_width="244dp"
        android:layout_height="33dp"
        android:layout_marginTop="90dp"
        android:gravity="center_horizontal"
        android:text="@string/due_date_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button" />

    <RadioGroup
        android:id="@+id/radioGroup_priority"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_todo_button">

        <RadioButton
            android:id="@+id/radioButton_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#C91517"
            android:minHeight="48dp"
            android:text="@string/radio_high"
            android:textColor="#FFE082"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_med"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFB300"
            android:minHeight="48dp"
            android:text="@string/radio_med"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_light"
            android:minHeight="48dp"
            android:text="@string/radio_low"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/calendar_group"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="next_week_chip,tomorrow_chip,today_chip,warning_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_horizontal"
        android:paddingStart="@dimen/dimen_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/today_timepicker_button">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipDateSelectedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateSelected"
            android:textStyle="bold" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipTimeSelectedView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeSelected"
            android:textStyle="bold" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>