<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDC9C9"
    tools:context=".AlarmActivity">

    <TextView
        android:id="@+id/textview_todo_title_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:maxEms="12"
        android:text="@string/alarm_msg"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_priority_alarm"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/alarm_aux_prioritytag"
        app:chipIcon="@drawable/ic_baseline_alert_priority"
        app:layout_constraintEnd_toEndOf="@+id/textview_todo_title_alarm"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/textview_todo_title_alarm"
        app:layout_constraintTop_toBottomOf="@+id/textview_todo_title_alarm" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_date_time_alarm"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="28dp"
        android:text="Date And Time"
        app:chipIcon="@drawable/ic_baseline_alarm_execute"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/chip_priority_alarm"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/chip_priority_alarm"
        app:layout_constraintTop_toBottomOf="@+id/chip_priority_alarm"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <Button
        android:id="@+id/button_off_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off_alarmbtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>